@startuml AlertGenerationSystem
title Alert Generation System

' Layout hints — straight orthogonal arrows, no diagonal crossings.
skinparam linetype ortho
skinparam classAttributeIconSize 0
left to right direction

package "com.data_management" {
  class DataStorage {
    - patientMap : Map<Integer, Patient>
    + addPatientData(patientId : int, value : double, type : String, timestamp : long) : void
    + getAllPatients() : List<Patient>
    + getRecords(patientId : int, start : long, end : long) : List<PatientRecord>
  }
  class Patient {
    - patientId : int
    + getAllRecords() : List<PatientRecord>
    + getPatientId() : int
  }
  class PatientRecord {
    - patientId : int
    - recordType : String
    - measurementValue : double
    - timestamp : long
  }
}

package "com.patient_identification" {
  class PatientIdentifier {
    + identify(simulatorId : int) : HospitalPatient
  }
  class HospitalPatient {
    - hospitalId : String
    - name : String
  }
}

package "com.alerts" {

  class AlertGenerator {
    - dataStorage : DataStorage
    - strategies : List<AlertStrategy>
    - alertManager : AlertManager
    - identifier : PatientIdentifier
    + AlertGenerator(dataStorage : DataStorage)
    + AlertGenerator(dataStorage : DataStorage, manager : AlertManager)
    + evaluateData(patient : Patient) : void
    # triggerAlert(alert : Alert) : void
  }

  interface AlertStrategy {
    + checkAlert(patientId : int, records : List<PatientRecord>) : List<Alert>
  }

  class BloodPressureStrategy implements AlertStrategy {
    + checkAlert(patientId : int, records : List<PatientRecord>) : List<Alert>
  }
  class OxygenSaturationStrategy implements AlertStrategy {
    + checkAlert(patientId : int, records : List<PatientRecord>) : List<Alert>
  }
  class HeartRateStrategy implements AlertStrategy {
    + checkAlert(patientId : int, records : List<PatientRecord>) : List<Alert>
  }

  class Alert {
    - patientId : String
    - condition : String
    - timestamp : long
    + Alert(patientId : String, condition : String, timestamp : long)
    + getPatientId() : String
    + getCondition() : String
    + getTimestamp() : long
  }

  class AlertManager {
    ' Fix from Week 2 feedback: was List<String>, now List<MedicalStaff>
    - staffList : List<MedicalStaff>
    - alerts : List<Alert>
    + dispatch(alert : Alert) : void
    + addStaff(staff : MedicalStaff) : void
    + getAlerts() : List<Alert>
  }

  class MedicalStaff {
    - staffId : String
    - name : String
    - role : String
    + receive(alert : Alert) : void
  }
}

' --- Relationships (kept orthogonal; no diagonals or crossings) ---

' AlertGenerator depends on storage and identification (Week 2 fix).
AlertGenerator --> DataStorage          : reads from >
AlertGenerator --> PatientIdentifier    : resolves IDs via >
AlertGenerator ..> Alert                : creates >
AlertGenerator --> AlertManager         : routes to >
AlertGenerator --> AlertStrategy        : delegates to >

' Composition: AlertManager owns Alerts and the staff roster.
AlertManager "1" *-- "0..*" Alert       : contains >
AlertManager --> MedicalStaff           : notifies >

' Patient identification ties simulator IDs to real hospital patients.
PatientIdentifier --> HospitalPatient   : returns >

' Data storage composition.
DataStorage "1" *-- "0..*" Patient
Patient "1" *-- "0..*" PatientRecord

@enduml
